# modern

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  package.json
.github/workflows/: ci.yml  nightly.yml  release.yml
.modern/: setup.sh
docs/: agent-architecture.md  extensions.md
docs/extensions/: README.md
patches/: @orpc%2Ftanstack-query@1.11.3.patch  @orpc%2Ftanstack-query@1.13.5.patch
scripts/: dev.ts  logo-svg-frames.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icon-assets/: Assets.car
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  terminal.rs
